k8s/akg/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akg
  namespace: app
  labels:
    app: akg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akg
  template:
    metadata:
      labels:
        app: akg
    spec:
      serviceAccountName: akg
      containers:
      - name: akg
        image: bazhova/akg:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
