k8s/akg/akg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akg
  namespace: app
  labels:
    app: akg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akg
  template:
    metadata:
      labels:
        app: akg
    spec:
      serviceAccountName: akg
      containers:
      - name: akg
        image: bazhova/akg:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: akg
  namespace: app
spec:
  selector:
    app: akg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
