k8s/akg/ksvc.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: akg
  namespace: default
  labels:
    networking.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "3"
        autoscaling.knative.dev/target: "100"
        sidecar.istio.io/inject: "true"
      labels:
        app: akg
    spec:
      serviceAccountName: akg
      containers:
        - image: bazhova/akg:0.0.0
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          env:
          - name: AKG_VERSION
            value: "0.0.0"
---
