k8s/akg/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: akg
  namespace: app
spec:
  selector:
    app: akg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
